# ionis-jupyter

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: publish.yml
binder/: postBuild  requirements.txt
data/: README.md
data/sample/: README.md  contest_signatures_sample.sqlite  solar_indices_sample.sqlite  wspr_signatures_sample.sqlite
data/vandenberg-tid/: README.md  vandenberg_tid_detail.csv  vandenberg_tid_summary.csv
notebooks/: 01-getting-started.ipynb  02-band-openings.ipynb  03-solar-correlation.ipynb  04-path-analysis.ipynb  05-greyline-terminator.ipynb  06-tid-detection.ipynb  07-cross-source-comparison.ipynb  08-distance-vs-snr.ipynb  09-seasonal-patterns.ipynb  10-ionis-model-api.ipynb  3y0k-predictions.csv  contest-arrl-dx-cw-2026.ipynb  contest-arrl-dx-ssb-2026.ipynb  contest-cq-wpx-ssb-2026.ipynb  dxpedition-3y0k-bouvet-2026.ipynb
scripts/: generate_sample_data.py
src/ionis_jupyter/: __init__.py  grids.py  loader.py  plots.py  solar.py
src/ionis_jupyter/sample_data/: grid_lookup_sample.sqlite
