[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ionis-jupyter"
version = "0.1.0"
description = "Jupyter notebooks and helper library for HF propagation research using IONIS datasets"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Greg Beam", email = "ki7mt@yahoo.com" }
]
keywords = [
    "jupyter", "data-science", "amateur-radio", "propagation",
    "space-weather", "wspr", "rbn", "data-visualization",
    "pandas", "hamsci", "ionosphere", "telemetry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Communications :: Ham Radio",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "numpy>=1.24",
    "ionis-mcp>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0",
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/IONIS-AI/ionis-jupyter"
Documentation = "https://github.com/IONIS-AI/ionis-jupyter#readme"
Repository = "https://github.com/IONIS-AI/ionis-jupyter"
Issues = "https://github.com/IONIS-AI/ionis-jupyter/issues"
Datasets = "https://sourceforge.net/projects/ionis-ai/files/"

[tool.hatch.build.targets.wheel]
packages = ["src/ionis_jupyter"]

[tool.ruff]
line-length = 100
target-version = "py310"
